@startuml

title __CLASSIC's Class Diagram__\n

  namespace visitor.examples.classic {
    class visitor.examples.classic.AdditionExpression {
        + AdditionExpression()
        + accept()
        + getLeft()
        + getRight()
    }
  }
  

  namespace visitor.examples.classic {
    class visitor.examples.classic.Demo {
        {static} + main()
    }
  }
  

  namespace visitor.examples.classic {
    class visitor.examples.classic.DoubleExpression {
        - value : double
        + DoubleExpression()
        + accept()
        + getValue()
    }
  }
  

  namespace visitor.examples.classic {
    interface visitor.examples.classic.Expression {
        {abstract} + accept()
    }
  }
  

  namespace visitor.examples.classic {
    class visitor.examples.classic.ExpressionCalculator {
        - result : double
        + getResult()
        + visit()
        + visit()
    }
  }
  

  namespace visitor.examples.classic {
    class visitor.examples.classic.ExpressionPrinter {
        - sb : StringBuilder
        + toString()
        + visit()
        + visit()
    }
  }
  

  namespace visitor.examples.classic {
    interface visitor.examples.classic.ExpressionVisitor {
        {abstract} + visit()
        {abstract} + visit()
    }
  }
  

  visitor.examples.classic.AdditionExpression .up.|> visitor.examples.classic.Expression
  visitor.examples.classic.AdditionExpression o-- visitor.examples.classic.Expression : left
  visitor.examples.classic.AdditionExpression o-- visitor.examples.classic.Expression : right
  visitor.examples.classic.DoubleExpression .up.|> visitor.examples.classic.Expression
  visitor.examples.classic.ExpressionCalculator .up.|> visitor.examples.classic.ExpressionVisitor
  visitor.examples.classic.ExpressionPrinter .up.|> visitor.examples.classic.ExpressionVisitor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
